Fix misaligned emotes
Somehow the emotes became centered instead of stuck to the bottom, how they should be. This fixes that.

--- a/Larger Compact Emotes.css
+++ b/Larger Compact Emotes.css
@@ -1,17 +1,15 @@
 /**
 * @name Larger Compact Emotes
 * @author Tharpadarp
-* @version 1.2
+* @version 1.3
 * @description Makes compact discord emotes the size of cozy emotes
 */
 /*Compact Emotes Are Larger*/
 .contents_f9f2ca [class="emoji"] ,
 [class="emoji jumboable"] {
   font-size: 34px;                              /*This is what makes emotes larger*/
-  transform: translate(0px, 12px);                              /*Moves emotes to be in line*/
   bottom: 12px                              /*Makes messages with emotes larger*/
 }
-
 .threadMessageAccessory_f9f2ca [class="emoji"] {     /*Thread containers no longer have oversized emotes*/
   font-size: 16px !important;
 }
@@ -21,4 +19,10 @@
 
 [class="repliedMessage_f9f2ca latin24CompactTimeStamp_f9f2ca"]:has(+ .contents_f9f2ca [class="emoji"] , + .contents_f9f2ca [class="emoji jumboable"]) .repliedMessageClickableSpine_f9f2ca  {      /*Make replied messages with emotes have a longer line*/
   height: 34px !important;
+}
+.contents_f9f2ca [class="emoji"] {          /*Moves emotes to be in line*/
+  transform: translate(0px, 12px);
+}
+.contents_f9f2ca:has([class="emoji jumboable"]) {         /*Moves emotes to be in line*/
+  transform: translate(0px, 12px);
 }
